--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{@@stwPageTitle}</title>
+    <title>{@@stwUnitTitle}</title>
     <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
