Webbase key navigation

--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -4,8 +4,8 @@
         <span>
             <!--i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i-->
             <i class="fa-solid fa-fw fa-cloud-arrow-up" title="Persist webbase" data-action="persist"></i>
-            <i class="fa-solid fa-fw fa-boxes-stacked" title="New area" data-action="Area"></i>
-            <i class="fa-solid fa-fw fa-box" title="New unit" data-action="Unit"></i>
+            <i class="fa-solid fa-fw fa-folder" title="New area" data-action="Area"></i>
+            <i class="fa-solid fa-fw fa-file" title="New unit" data-action="Unit"></i>
             <i class="fa-solid fa-fw fa-square" title="New content" data-action="Content"></i>
             <!--i class="fa-regular fa-fw fa-trash-can" title="Show/Hide trashed nodes" data-action="trashed"></i-->
         </span>
