--- a/studio/panels/datasources.html
+++ b/studio/panels/datasources.html
@@ -1,20 +1,20 @@
 <article tabindex="0" class="stwTree" id="datasources" onclick="stwStudio.manageDatasource(event)">
-    <h1><i class="fa fa-fw fa-nothing"></i> datasources
+    <h1><i class="fa-light fa-fw fa-nothing"></i> datasources
         <span>
-            <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
-            <i class="fa fa-fw fa-plus" title="Add datasource" data-action="addSource"></i>
+            <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
+            <i class="fa-light fa-fw fa-plus" title="Add datasource" data-action="addSource"></i>
         </span>
     </h1>
     <div class="stwLoading">
-        <i class="fa fa-sync fa-spin fa-2x"></i>
+        <i class="fa-light fa-sync fa-spin fa-2x"></i>
     </div>
 </article>
 <article class="stwForm" id="properties" onclick="stwStudio.manageProperties(event, 'datasources')"
     style="display:none">
-    <h1><i class="fa fa-fw fa-angle-down"></i> properties
+    <h1><i class="fa-light fa-fw fa-angle-down"></i> properties
         <span>
-            <i class="fa-regular fa-fw fa-trash-can" title="Trash" data-action="trash"></i>
-            <i class="fa-solid fa-fw fa-expand" title="Expand (F2)"
+            <i class="fa-light fa-fw fa-trash-can" title="Trash" data-action="trash"></i>
+            <i class="fa-light fa-fw fa-expand" title="Expand (F2)"
                 data-action="Expand"></i><!--TODO: interact with datasource-->
         </span>
     </h1>
