--- a/studio/panels/search.html
+++ b/studio/panels/search.html
@@ -1,5 +1,5 @@
 <article tabindex="0" class="stwTree" id="search" onchange="stwStudio.manageSearch(event)">
-    <h1><i class="fa fa-fw fa-nothing"></i> search webbase</h1>
+    <h1><i class="fa-light fa-fw fa-nothing"></i> search webbase</h1>
     <header>
         <article class="stwForm">
             <form name="search">
@@ -12,7 +12,7 @@
                     </li>
                     <li><input type="text" name="replace" placeholder="Replace">
                         <span id="replaceMode">
-                            <span title="Replace all"><i class="fa fa-copy"></i></span>
+                            <span title="Replace all"><i class="fa-light fa-copy"></i></span>
                         </span>
                     </li>
                 </ul>
