--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,7 @@
     <title>{@@stwUnitTitle}</title>
     <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://kit.fontawesome.com/a29c3d2fa4.css" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/stwStyle.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
