--- a/studio/panels/explorer.html
+++ b/studio/panels/explorer.html
@@ -1,13 +1,13 @@
 <article class="stwTree" id="explorer" onclick="stwStudio.manageFiles(event)">
-    <h1><i class="fa fa-fw fa-nothing"></i> explorer
+    <h1><i class="fa-light fa-fw fa-nothing"></i> explorer
         <span>
-            <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
-            <i class="fa-regular fa-fw fa-folder" title="New folder" data-action="newFolder"></i>
-            <i class="fa-regular fa-fw fa-file" title="New file" data-action="newFile"></i>
+            <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
+            <i class="fa-kit fa-fw fa-light-folder-circle-plus" title="New folder" data-action="newFolder"></i>
+            <i class="fa-kit fa-fw fa-light-file-circle-plus" title="New file" data-action="newFile"></i>
         </span>
     </h1>
     <div class="stwLoading">
-        <i class="fa fa-sync fa-spin fa-2x"></i>
+        <i class="fa-light fa-sync fa-spin fa-2x"></i>
     </div>
 </article>
 <div>&nbsp;</div>
