--- a/studio/panels/roles.html
+++ b/studio/panels/roles.html
@@ -1,9 +1,9 @@
 <article tabindex="0" class="stwTree" id="roles" onclick="stwStudio.manageGroups(event)">
-    <h1><i class="fa fa-fw fa-nothing"></i> roles
+    <h1><i class="fa-light fa-fw fa-nothing"></i> roles
         <span>
-            <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
-            <i class="fa-solid fa-fw fa-street-view" title="Enable/disable impersonation" data-action="impersonate"></i>
-            <i class="fa-solid fa-fw fa-plus" title="Add role" data-action="addGroup"></i>
+            <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
+            <i class="fa-light fa-fw fa-street-view" title="Enable/disable impersonation" data-action="impersonate"></i>
+            <i class="fa-light fa-fw fa-plus" title="Add role" data-action="addGroup"></i>
         </span>
     </h1>
     <header>
@@ -15,13 +15,13 @@
         </article>
     </header>
     <div class="stwLoading">
-        <i class="fa fa-sync fa-spin fa-2x"></i>
+        <i class="fa-light fa-sync fa-spin fa-2x"></i>
     </div>
 </article>
 <article class="stwForm" id="properties" onclick="stwStudio.manageProperties(event, 'roles')" style="display:none">
-    <h1><i class="fa fa-fw fa-angle-down"></i> properties
+    <h1><i class="fa-light fa-fw fa-angle-down"></i> properties
         <span>
-            <i class="fa-regular fa-fw fa-trash-can" title="Trash" data-action="trash"></i>
+            <i class="fa-light fa-fw fa-trash-can" title="Trash" data-action="trash"></i>
         </span>
     </h1>
     <form class="stwHideLabels" onchange="stwStudio.submitForm(event)">
