--- a/studio/panels/settings.html
+++ b/studio/panels/settings.html
@@ -1,8 +1,8 @@
 <article class="stwTree" id="settings" onchange="stwStudio.manageSettings(event)">
-    <h1><i class="fa fa-fw fa-nothing"></i> settings</h1>
+    <h1><i class="fa-light fa-fw fa-nothing"></i> settings</h1>
 </article>
 <article class="stwForm" onchange="stwStudio.manageSettings(event)">
-    <h1><i class="fa fa-fw fa-angle-right"></i> apparence</h1>
+    <h1><i class="fa-light fa-fw fa-angle-right"></i> apparence</h1>
     <form>
         <ul>
             <li><label>Theme<select name="theme">
