--- a/studio/panels/sourcecontrol.html
+++ b/studio/panels/sourcecontrol.html
@@ -1,7 +1,7 @@
 <article tabindex="0" class="stwTree" id="sourcecontrol" onclick="stwStudio.manageFiles(event)">
-    <h1><i class="fa fa-fw fa-nothing"></i> source control
+    <h1><i class="fa-light fa-fw fa-nothing"></i> source control
         <span>
-            <i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
+            <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
         </span>
     </h1>
     <header>
@@ -19,7 +19,7 @@
         </article>
     </header>
     <div class="stwLoading">
-        <i class="fa fa-sync fa-spin fa-2x"></i>
+        <i class="fa-light fa-sync fa-spin fa-2x"></i>
     </div>
 </article>
 <div>&nbsp;</div>
