--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -1,23 +1,23 @@
 <article tabindex="0" class="stwTree" id="webbase" onclick="stwStudio.manageWebbase(event)"
     oncontextmenu="stwStudio.manageContextMenu(event)">
-    <h1><i class="fa fa-fw fa-nothing"></i> webbase
+    <h1><i class="fa-light fa-fw fa-nothing"></i> webbase
         <span>
-            <!--i class="fa-solid fa-fw fa-rotate" title="Refresh" data-action="refresh"></i-->
-            <i class="fa-solid fa-fw fa-cloud-arrow-up" title="Persist webbase" data-action="persist"></i>
-            <i class="fa-solid fa-fw fa-folder" title="New area" data-action="Area"></i>
-            <i class="fa-solid fa-fw fa-file" title="New unit" data-action="Unit"></i>
-            <i class="fa-solid fa-fw fa-square" title="New content" data-action="Content"></i>
-            <!--i class="fa-regular fa-fw fa-trash-can" title="Show/Hide trashed nodes" data-action="trashed"></i-->
+            <!--i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i-->
+            <i class="fa-light fa-fw fa-cloud-arrow-up" title="Persist webbase" data-action="persist"></i>
+            <i class="fa-kit fa-fw fa-light-folder-circle-plus" title="New area" data-action="Area"></i>
+            <i class="fa-kit fa-fw fa-light-file-circle-plus" title="New unit" data-action="Unit"></i>
+            <i class="fa-kit fa-fw fa-light-square-circle-plus" title="New content" data-action="Content"></i>
+            <!--i class="fa-light fa-fw fa-trash-can" title="Show/Hide trashed nodes" data-action="trashed"></i-->
         </span>
     </h1>
     <div class="stwLoading">
-        <i class="fa fa-sync fa-spin fa-2x"></i>
+        <i class="fa-light fa-sync fa-spin fa-2x"></i>
     </div>
 </article>
 <article class="stwForm" id="properties" onclick="stwStudio.manageProperties(event, 'webbase')">
-    <h1><i class="fa fa-fw fa-angle-right"></i> properties
+    <h1><i class="fa-light fa-fw fa-angle-right"></i> properties
         <span>
-            <i class="fa-solid fa-fw fa-expand" title="Expand (Ctrl+E)" data-action="expand"></i>
+            <i class="fa-light fa-fw fa-expand" title="Expand (Ctrl+E)" data-action="expand"></i>
         </span>
     </h1>
     <form class="stwHideLabels" onchange="stwStudio.submitForm(event)">
@@ -44,7 +44,7 @@
                 <div style="display: flex; align-items: center;">
                     <input name="permalink" title="Main unit" readonly>
                     <input type="hidden" name="mainunit">
-                    <i class="fa fa-fw fa-bars" style="margin-left: 0.25em; cursor: pointer;"></i>
+                    <i class="fa-light fa-fw fa-bars" style="margin-left: 0.25em; cursor: pointer;"></i>
                 </div>
             </li>
 
@@ -103,7 +103,7 @@
     </form>
 </article>
 <article class="stwTree" id="visibility" onclick="stwStudio.manageVisibility(event)">
-    <h1><i class="fa fa-fw fa-angle-right"></i> visibilities</h1>
+    <h1><i class="fa-light fa-fw fa-angle-right"></i> visibilities</h1>
     <ul style="display: none; max-height: 10em;"></ul>
 </article>
 <div>&nbsp;</div>
