--- a/studio/panels/datasources.html
+++ b/studio/panels/datasources.html
@@ -1,8 +1,8 @@
 <article tabindex="0" class="stwTree" id="datasources" onclick="stwStudio.manageDatasource(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> datasources
         <span>
-            <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
-            <i class="fa-light fa-fw fa-plus" title="Add datasource" data-action="addSource"></i>
+            <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>&nbsp;
+            <i class="fa-kit fa-fw fa-light-database-circle-plus" title="Add datasource" data-action="addSource"></i>
         </span>
     </h1>
     <div class="stwLoading">
