--- a/studio/panels/roles.html
+++ b/studio/panels/roles.html
@@ -1,9 +1,9 @@
 <article tabindex="0" class="stwTree" id="roles" onclick="stwStudio.manageGroups(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> roles
         <span>
-            <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
-            <i class="fa-light fa-fw fa-street-view" title="Enable/disable impersonation" data-action="impersonate"></i>
-            <i class="fa-light fa-fw fa-plus" title="Add role" data-action="addGroup"></i>
+            <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>&nbsp;
+            <i class="fa-kit fa-fw fa-light-street-view-user" title="Enable/disable impersonation" data-action="impersonate"></i>&nbsp;
+            <i class="fa-kit fa-fw fa-light-street-view-circle-plus" title="Add role" data-action="addGroup"></i>
         </span>
     </h1>
     <header>
