--- a/studio/panels/settings.html
+++ b/studio/panels/settings.html
@@ -9,7 +9,7 @@
                 <option value="stwDark">Dark</option>
                 <option value="stwLight">Light</option>
             </select></label></li>
-            <li><label>Trim color <input id="mainColor" type="color" name="mainColor"></label></li>
+            <li><label>Trim color <input id="mainColor" type="color" name="mainColor" value="#ff004c"></label></li>
             <li><label>Hide form labels<select name="hideLabels">
                 <option value="true">Yes</option>
                 <option value="false">No</option>
