--- a/studio/panels/explorer.html
+++ b/studio/panels/explorer.html
@@ -1,8 +1,8 @@
 <article class="stwTree" id="explorer" onclick="stwStudio.manageFiles(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> explorer
         <span>
-            <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
-            <i class="fa-kit fa-fw fa-light-folder-circle-plus" title="New folder" data-action="newFolder"></i>
+            <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>&nbsp;
+            <i class="fa-kit fa-fw fa-light-folder-circle-plus" title="New folder" data-action="newFolder"></i>&nbsp;
             <i class="fa-kit fa-fw fa-light-file-circle-plus" title="New file" data-action="newFile"></i>
         </span>
     </h1>
