--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -2,12 +2,12 @@
     oncontextmenu="stwStudio.manageContextMenu(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> webbase
         <span>
-            <!--i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i-->
-            <i class="fa-light fa-fw fa-cloud-arrow-up" title="Persist webbase" data-action="persist"></i>
-            <i class="fa-kit fa-fw fa-light-folder-circle-plus" title="New area" data-action="Area"></i>
-            <i class="fa-kit fa-fw fa-light-file-circle-plus" title="New unit" data-action="Unit"></i>
+            <!--<i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>&nbsp;-->
+            <i class="fa-light fa-fw fa-cloud-arrow-up" title="Persist webbase" data-action="persist"></i>&nbsp;
+            <i class="fa-kit fa-fw fa-light-folder-circle-plus" title="New area" data-action="Area"></i>&nbsp;
+            <i class="fa-kit fa-fw fa-light-grid-2-circle-plus" title="New unit" data-action="Unit"></i>&nbsp;
             <i class="fa-kit fa-fw fa-light-square-circle-plus" title="New content" data-action="Content"></i>
-            <!--i class="fa-light fa-fw fa-trash-can" title="Show/Hide trashed nodes" data-action="trashed"></i-->
+            <!--<i class="fa-light fa-fw fa-trash-can" title="Show/Hide trashed nodes" data-action="trashed"></i>-->
         </span>
     </h1>
     <div class="stwLoading">
@@ -101,6 +101,10 @@
             <li><label>Layout</label><textarea name="layout" placeholder="Layout" title="Layout"></textarea></li>
         </ul>
     </form>
+</article>
+<article class="stwTree" id="links" onclick="stwStudio.manageLinked(event)">
+    <h1><i class="fa-light fa-fw fa-angle-right"></i> linked</h1>
+    <ul style="display: none; max-height: 10em;"></ul>
 </article>
 <article class="stwTree" id="visibility" onclick="stwStudio.manageVisibility(event)">
     <h1><i class="fa-light fa-fw fa-angle-right"></i> visibilities</h1>
