Studio tree and accordion

--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -14,7 +14,7 @@
         <i class="fa-light fa-sync fa-spin fa-2x"></i>
     </div>
 </article>
-<article class="stwForm" id="properties" onclick="stwStudio.manageProperties(event, 'webbase')">
+<article class="stwForm stwAccordion" id="properties" onclick="stwStudio.manageProperties(event, 'webbase')">
     <h1><i class="fa-light fa-fw fa-angle-right"></i> properties
         <span>
             <i class="fa-light fa-fw fa-expand" title="Expand (Ctrl+E)" data-action="expand"></i>
@@ -102,11 +102,11 @@
         </ul>
     </form>
 </article>
-<article class="stwTree" id="links" onclick="stwStudio.manageLinked(event)">
+<article class="stwTree stwAccordion" id="links" onclick="stwStudio.manageLinked(event)">
     <h1><i class="fa-light fa-fw fa-angle-right"></i> linked</h1>
     <ul style="display: none; max-height: 10em;"></ul>
 </article>
-<article class="stwTree" id="visibility" onclick="stwStudio.manageVisibility(event)">
+<article class="stwTree stwAccordion" id="visibility" onclick="stwStudio.manageVisibility(event)">
     <h1><i class="fa-light fa-fw fa-angle-right"></i> visibilities</h1>
     <ul style="display: none; max-height: 10em;"></ul>
 </article>
