--- a/studio/panels/webbase.html
+++ b/studio/panels/webbase.html
@@ -81,8 +81,7 @@
                     <option value="-800" disabled>Calendar</option>
                     <option value="-600" disabled>Graph</option>
                     <option value="" disabled>Map</option>
-                    <option value="" disabled>Menu</option>
-                    <option value="-102" disabled>Unit links</option>
+                    <option value="Menu" data-value="-102">Menu</option>
                     <option value="-101" disabled>Area links</option>
                     <option value="-103" disabled>Indexed links</option>
                     <option value="Breadcrumbs" data-value="-104">Breadcrumbs</option>
@@ -102,7 +101,7 @@
         </ul>
     </form>
 </article>
-<article class="stwTree stwAccordion" id="links" onclick="stwStudio.manageLinked(event)">
+<article class="stwTree stwAccordion" id="linked" onclick="stwStudio.manageLinked(event)">
     <h1><i class="fa-light fa-fw fa-angle-right"></i> linked</h1>
     <ul style="display: none; max-height: 10em;"></ul>
 </article>
