Renamed stw folders

--- a/stwStudio/index.html
+++ b/stwStudio/index.html
@@ -11,31 +11,31 @@
             location = '..';
     </script>
 
-    <link rel="icon" type="image/png" href="/studio/favicon.ico">
-    <link rel="stylesheet" href="/studio/css/stwStyle.css">
+    <link rel="icon" type="image/png" href="/stwStudio/favicon.ico">
+    <link rel="stylesheet" href="/stwStudio/css/stwStyle.css">
     <link rel="stylesheet" href="https://kit.fontawesome.com/a29c3d2fa4.css" crossorigin="anonymous">
-    <script src="/studio/js/stwStudio.js"></script>
+    <script src="/stwStudio/js/stwStudio.js"></script>
 </head>
 
 <body class="stwDark">
     <section class="stwPanels" onclick="stwStudio.managePanels(event)">
         <i tabindex="0" role="link" class="fa-light fa-fw fa-sitemap" title="Webbase"
-            data-panel="/studio/panels/webbase.html"></i>
+            data-panel="/stwStudio/panels/webbase.html"></i>
         <i tabindex="0" role="link" class="fa-light fa-fw fa-search" title="Search webbase"
-            data-panel="/studio/panels/search.html"></i>
+            data-panel="/stwStudio/panels/search.html"></i>
         <i tabindex="0" role="link" class="fa-light fa-fw fa-folder" title="Explorer"
-            data-panel="/studio/panels/explorer.html"></i>
+            data-panel="/stwStudio/panels/explorer.html"></i>
         <i tabindex="0" role="link" class="fa-light fa-fw fa-code-branch" title="Source control"
-            data-panel="/studio/panels/sourcecontrol.html"></i>
+            data-panel="/stwStudio/panels/sourcecontrol.html"></i>
         <i tabindex="0" role="link" class="fa-light fa-fw fa-bug" title="Debug"
-            data-panel="/studio/panels/debug.html"></i>
+            data-panel="/stwStudio/panels/debug.html"></i>
         <i tabindex="0" role="link" class="fa-light fa-fw fa-database" title="Datasources"
-            data-panel="/studio/panels/datasources.html"></i>
+            data-panel="/stwStudio/panels/datasources.html"></i>
         <i tabindex="0" role="link" class="fa-light fa-fw fa-street-view" title="Roles"
-            data-panel="/studio/panels/roles.html"></i>
+            data-panel="/stwStudio/panels/roles.html"></i>
         <span></span>
         <i tabindex="0" role="link" class="fa-light fa-fw fa-cog" title="Settings"
-            data-panel="/studio/panels/settings.html"></i>
+            data-panel="/stwStudio/panels/settings.html"></i>
     </section>
     <section class="stwPanel"></section>
     <section class="stwTabs">
