--- a/stwStudio/panels/settings.html
+++ b/stwStudio/panels/settings.html
@@ -2,7 +2,7 @@
     <h1><i class="fa-light fa-fw fa-nothing"></i> settings</h1>
 </article>
 <article class="stwForm" onchange="stwStudio.manageSettings(event)">
-    <h1><i class="fa-light fa-fw fa-angle-right"></i> apparence</h1>
+    <h1><i class="fa-light fa-fw fa-nothing"></i> apparence</h1>
     <form>
         <ul>
             <li><label>Theme<select name="theme">
