--- a/stwStudio/panels/webbase.html
+++ b/stwStudio/panels/webbase.html
@@ -5,7 +5,7 @@
             <!--<i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>&nbsp;-->
             <i class="fa-light fa-fw fa-cloud-arrow-up" title="Persist webbase" data-action="persist"></i>&nbsp;
             <i class="fa-kit fa-fw fa-light-folder-grid-circle-plus" title="New area" data-action="Area"></i>&nbsp;
-            <i class="fa-kit fa-fw fa-light-grid-2-circle-plus" title="New unit" data-action="Unit"></i>&nbsp;
+            <i class="fa-kit fa-light-rectangles-mixed-circle-plus" title="New unit" data-action="Unit"></i>&nbsp;
             <i class="fa-kit fa-fw fa-light-square-circle-plus" title="New content" data-action="Content"></i>
             <!--<i class="fa-light fa-fw fa-trash-can" title="Show/Hide trashed nodes" data-action="trashed"></i>-->
         </span>
@@ -101,8 +101,8 @@
         </ul>
     </form>
 </article>
-<article class="stwTree stwAccordion" id="linked" onclick="stwStudio.manageLinked(event)">
-    <h1><i class="fa-light fa-fw fa-angle-right"></i> linked</h1>
+<article class="stwTree stwAccordion" id="options" onclick="stwStudio.manageOptions(event)">
+    <h1><i class="fa-light fa-fw fa-angle-right"></i> options</h1>
     <ul style="display: none; max-height: 10em;"></ul>
 </article>
 <article class="stwTree stwAccordion" id="visibility" onclick="stwStudio.manageVisibility(event)">
