--- a/stwStudio/panels/content.html
+++ b/stwStudio/panels/content.html
@@ -1,4 +1,4 @@
-<article class="stwForm">
+<article class="stwsForm">
     <div name="properties"></div>
     <div name="datasource">
         <div name="structure"></div>
