--- a/stwStudio/panels/search.html
+++ b/stwStudio/panels/search.html
@@ -1,7 +1,7 @@
-<article tabindex="0" class="stwTree" id="search" onchange="stwStudio.manageSearch(event)">
+<article tabindex="0" class="stwsTree" id="search" onchange="stwStudio.manageSearch(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> search webbase</h1>
     <header>
-        <article class="stwForm">
+        <article class="stwsForm">
             <form name="search">
                 <ul>
                     <li><input type="text" name="search" placeholder="Search">
