--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,14 @@
     <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgo=">
 
     <link rel="stylesheet" href="https://kit.fontawesome.com/a29c3d2fa4.css" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="/stwStyles/stwStyleDefault.css"> -->
     <link rel="stylesheet" href="/css/stwStyle.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <section id="header"></section>
-    <section id="sidebar"></section>
+    <section id="aside"></section>
     <section id="main"></section>
     <section id="footer"></section>
 
