--- a/stwStudio/index.html
+++ b/stwStudio/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>STW Studio</title>
     <script>
-        // Exit Spin the Web Studio if not developers
+        // Exit Spin the Web Studio if not developer
         if (document.cookie.split('; ').find(row => row.startsWith('stwDeveloper='))?.split('=')[1] != 'true')
             location = '..';
         // Do not allow studio within frame
@@ -15,13 +15,13 @@
     </script>
 
     <link rel="icon" type="image/png" href="/stwStudio/favicon.ico">
-    <link rel="stylesheet" href="/stwStudio/css/stwStyle.css">
+    <link rel="stylesheet" href="/stwStudio/css/stwStudio.css">
     <link rel="stylesheet" href="https://kit.fontawesome.com/a29c3d2fa4.css" crossorigin="anonymous">
     <script src="/stwStudio/js/stwStudio.js"></script>
 </head>
 
-<body class="stwDark">
-    <section class="stwPanels" onclick="stwStudio.managePanels(event)">
+<body class="stwsDark">
+    <section class="stwsPanels" onclick="stwStudio.managePanels(event)">
         <i tabindex="0" role="link" class="fa-light fa-fw fa-sitemap" title="Webbase"
             data-panel="/stwStudio/panels/webbase.html"></i>
         <i tabindex="0" role="link" class="fa-light fa-fw fa-search" title="Search webbase"
@@ -40,12 +40,12 @@
         <i tabindex="0" role="link" class="fa-light fa-fw fa-cog" title="Settings"
             data-panel="/stwStudio/panels/settings.html"></i>
     </section>
-    <section class="stwPanel"></section>
-    <section class="stwTabs">
+    <section class="stwsPanel"></section>
+    <section class="stwsTabs">
         <div onclick="stwStudio.manageTab(event)">
-            <span tabindex="0" role="link" class="stwTabLabel" title="Browse" selected>Browse</span></div>
-        <div class="stwTab" selected>
-            <div class="stwBrowsebar" onclick="stwStudio.manageBrowse(event)">
+            <span tabindex="0" role="link" class="stwsTabLabel" title="Browse" selected>Browse</span></div>
+        <div class="stwsTab" selected>
+            <div class="stwsBrowsebar" onclick="stwStudio.manageBrowse(event)">
                 <i tabindex="0" role="link" class="fa-light fa-fw fa-arrow-left" title="Back" data-action="back"></i>
                 <i tabindex="0" role="link" class="fa-light fa-fw fa-arrow-right" title="Forward"
                     data-action="forward"></i>
@@ -60,8 +60,8 @@
             <iframe id="Browse" title="Webo"></iframe>
         </div>
     </section>
-    <section id="statusbar" class="stwStatusbar"><span></span><span></span><span></span></section>
-    <dialog id="stwPopup"></dialog>
+    <section id="statusbar" class="stwsStatusbar"><span></span><span></span><span></span></section>
+    <dialog id="stwsPopup"></dialog>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ace/1.15.0/ace.min.js"
         integrity="sha512-e1Y1L6lY7YKDe+zseybZUG8MYUMLA1jxMQAPJqRYiA4L8NPaXfW+h52QQTLurHW4w3b21LxH/u1sZYMBtoB70w=="
