--- a/stwStudio/panels/datasources.html
+++ b/stwStudio/panels/datasources.html
@@ -1,15 +1,15 @@
-<article tabindex="0" class="stwTree" id="datasources" onclick="stwStudio.manageDatasource(event)">
+<article tabindex="0" class="stwsTree" id="datasources" onclick="stwStudio.manageDatasource(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> datasources
         <span>
             <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>&nbsp;
             <i class="fa-kit fa-fw fa-light-database-circle-plus" title="Add datasource" data-action="addSource"></i>
         </span>
     </h1>
-    <div class="stwLoading">
+    <div class="stwsLoading">
         <i class="fa-light fa-sync fa-spin fa-2x"></i>
     </div>
 </article>
-<article class="stwForm" id="properties" onclick="stwStudio.manageProperties(event, 'datasources')"
+<article class="stwsForm" id="properties" onclick="stwStudio.manageProperties(event, 'datasources')"
     style="display:none">
     <h1><i class="fa-light fa-fw fa-angle-down"></i> properties
         <span>
