--- a/stwStudio/panels/debug.html
+++ b/stwStudio/panels/debug.html
@@ -1,13 +1,13 @@
-<article tabindex="0" class="stwTree" id="debug" onclick="stwStudio.manageFiles(event)">
+<article tabindex="0" class="stwsTree" id="debug" onclick="stwStudio.manageFiles(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> debug</h1>
     <header>
-        <article class="stwForm">
+        <article class="stwsForm">
             <form>
                 
             </form>
         </article>
     </header>
-    <div class="stwLoading">
+    <div class="stwsLoading">
         
     </div>
 </article>
