--- a/stwStudio/panels/explorer.html
+++ b/stwStudio/panels/explorer.html
@@ -1,4 +1,4 @@
-<article class="stwTree" id="explorer" onclick="stwStudio.manageFiles(event)">
+<article class="stwsTree" id="explorer" onclick="stwStudio.manageFiles(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> explorer
         <span>
             <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>&nbsp;
@@ -6,7 +6,7 @@
             <i class="fa-kit fa-fw fa-light-file-circle-plus" title="New file" data-action="newFile"></i>
         </span>
     </h1>
-    <div class="stwLoading">
+    <div class="stwsLoading">
         <i class="fa-light fa-sync fa-spin fa-2x"></i>
     </div>
 </article>
