--- a/stwStudio/panels/settings.html
+++ b/stwStudio/panels/settings.html
@@ -1,13 +1,13 @@
-<article class="stwTree" id="settings" onchange="stwStudio.manageSettings(event)">
+<article class="stwsTree" id="settings" onchange="stwStudio.manageSettings(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> settings</h1>
 </article>
-<article class="stwForm" onchange="stwStudio.manageSettings(event)">
+<article class="stwsForm" onchange="stwStudio.manageSettings(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> apparence</h1>
     <form>
         <ul>
             <li><label>Theme<select name="theme">
-                <option value="stwDark">Dark</option>
-                <option value="stwLight">Light</option>
+                <option value="stwsDark">Dark</option>
+                <option value="stwsLight">Light</option>
             </select></label></li>
             <li><label>Trim color <input id="mainColor" type="color" name="mainColor" value="#ff004c"></label></li>
             <li><label>Hide form labels<select name="hideLabels">
