--- a/stwStudio/panels/sourcecontrol.html
+++ b/stwStudio/panels/sourcecontrol.html
@@ -1,11 +1,11 @@
-<article tabindex="0" class="stwTree" id="sourcecontrol" onclick="stwStudio.manageFiles(event)">
+<article tabindex="0" class="stwsTree" id="sourcecontrol" onclick="stwStudio.manageFiles(event)">
     <h1><i class="fa-light fa-fw fa-nothing"></i> source control
         <span>
             <i class="fa-light fa-fw fa-rotate" title="Refresh" data-action="refresh"></i>
         </span>
     </h1>
     <header>
-        <article class="stwForm">
+        <article class="stwsForm">
             <form>
                 <ul>
                     <li><input type="text" name="message" placeholder="Message"></li>
@@ -18,7 +18,7 @@
             </form>
         </article>
     </header>
-    <div class="stwLoading">
+    <div class="stwsLoading">
         <i class="fa-light fa-sync fa-spin fa-2x"></i>
     </div>
 </article>
