--- a/stwStudio/panels/search.html
+++ b/stwStudio/panels/search.html
@@ -6,13 +6,13 @@
                 <ul>
                     <li><input type="text" name="search" placeholder="Search">
                         <span id="searchMode">
-                            <span title="Ignore case">Aa</span>
-                            <span title="Regular expression">.*</span>
+                            <span title="Ignore case" class="searchMode"><i class="fa-light fa-font-case"></i></span>
+                            <span title="Regular expression" class="searchMode"><i class="fa-solid fa-period"></i> <i class="fa-light fa-asterisk"></i></span>
                         </span>
                     </li>
                     <li><input type="text" name="replace" placeholder="Replace">
                         <span id="replaceMode">
-                            <span title="Replace all"><i class="fa-light fa-copy"></i></span>
+                            <span class="replaceMode"><i class="fa-light fa-copy" title="Replace all"></i></span>
                         </span>
                     </li>
                 </ul>
