--- a/stwStudio/panels/option.html
+++ b/stwStudio/panels/option.html
@@ -15,5 +15,6 @@
                     <option>_top</option>
                 </select></li>
         </ul>
+        <div style="text-align:right; padding: 0 1em;"><button onclick="this.closest('dialog').close()">Cancel</button>&emsp;<button onclick="this.closest('dialog').close('OK')">OK</button></div>
     </form>
 </article>
